force-app/main/default/objects/Contact/fields/Accessibility_Needs__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Needs__c</fullName>
    <label>Accessibility Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Accessibility_Needs</valueSetName>
    </valueSet>
</CustomField>