force-app/main/default/objects/Contact/fields/Active_FS_Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Active_FS_Service_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active FS Service Case</label>
    <type>Checkbox</type>
</CustomField>