force-app/main/default/objects/Contact/fields/Active_HC_or_CMH_Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Active_HC_or_CMH_Service_Case__c</fullName>
    <formula>OR( 
  Active_HC_Service_Case__c,
  Active_CMH_Service_Case__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active HC or CMH Service Case</label>
    <type>Checkbox</type>
</CustomField>