force-app/main/default/objects/Contact/fields/Active_HC_Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Active_HC_Service_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active HC Service Case</label>
    <type>Checkbox</type>
</CustomField>