force-app/main/default/objects/Contact/fields/Active_RC_Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Active_RC_Service_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active RC Service Case</label>
    <type>Checkbox</type>
</CustomField>