force-app/main/default/objects/Contact/fields/Active_RC_Service_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Active_RC_Service_Case_Id__c</fullName>
    <label>Active RC Service Case Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>