force-app/main/default/objects/Contact/fields/Active_Service_Case_Formula__c.field-meta.xml
<CustomField>
    <fullName>Active_Service_Case_Formula__c</fullName>
    <formula>OR
(
    Active_CMH_Service_Case__c,
    Active_HC_Service_Case__c,
    Active_RC_Service_Case__c,
    Active_FS_Service_Case__c,
    Active_HPS_Service_Case__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Service Case Formula</label>
    <type>Checkbox</type>
</CustomField>