force-app/main/default/objects/Contact/fields/Active_Service_Case_Types__c.field-meta.xml
<CustomField>
    <fullName>Active_Service_Case_Types__c</fullName>
    <formula>LEFT(

  IF( Active_CMH_Service_Case__c, &quot;CMH; &quot;, Null) &amp;  
  IF( Active_FS_Service_Case__c, &quot;FS; &quot;, Null) &amp;  
  IF( Active_HPS_Service_Case__c, &quot;HPS; &quot;, Null) &amp;  
  IF( Active_HC_Service_Case__c, &quot;HC; &quot;, Null) &amp;  
  IF( Active_RC_Service_Case__c, &quot;RC; &quot;, Null),

  LEN(
    IF( Active_CMH_Service_Case__c, &quot;CMH; &quot;, Null) &amp;  
    IF( Active_FS_Service_Case__c, &quot;FS; &quot;, Null) &amp;  
    IF( Active_HPS_Service_Case__c, &quot;HPS; &quot;, Null) &amp;  
    IF( Active_HC_Service_Case__c, &quot;HC; &quot;, Null) &amp;  
    IF( Active_RC_Service_Case__c, &quot;RC; &quot;, Null)
  ) - 2

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Service Case Types</label>
    <type>Text</type>
</CustomField>