force-app/main/default/objects/Contact/fields/AdminAccessibilityBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminAccessibilityBlank__c</fullName>
    <formula>ISNULL( Accessibility_Needs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminAccessibilityBlank</label>
    <type>Checkbox</type>
</CustomField>