force-app/main/default/objects/Contact/fields/AdminAnnualCheckInDateIssue__c.field-meta.xml
<CustomField>
    <fullName>AdminAnnualCheckInDateIssue__c</fullName>
    <formula>AND(
    Active_RC_Service_Case__c = True,
    OR(
								ISBLANK(Annual_Regional_Center_Check_in_Date__c),
								TODAY() &gt; ADDMONTHS(Annual_Regional_Center_Check_in_Date__c,12)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminAnnualCheckInDateIssue</label>
    <type>Checkbox</type>
</CustomField>