force-app/main/default/objects/Contact/fields/AdminBedroomsWantedBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminBedroomsWantedBlank__c</fullName>
    <formula>ISNULL( Bedrooms_Wanted__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminBedroomsWantedBlank</label>
    <type>Checkbox</type>
</CustomField>