force-app/main/default/objects/Contact/fields/AdminBirthdateBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminBirthdateBlank__c</fullName>
    <formula>ISBLANK( Birthdate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminBirthdateBlank</label>
    <type>Checkbox</type>
</CustomField>