force-app/main/default/objects/Contact/fields/AdminCheckbox__c.field-meta.xml
<CustomField>
    <fullName>AdminCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AdminCheckbox</label>
    <type>Checkbox</type>
</CustomField>