force-app/main/default/objects/Contact/fields/AdminCreditProblemBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminCreditProblemBlank__c</fullName>
    <formula>ISBLANK( TEXT( Credit_Problem__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminCreditProblemBlank</label>
    <type>Checkbox</type>
</CustomField>