force-app/main/default/objects/Contact/fields/AdminCriminalHistoryBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminCriminalHistoryBlank__c</fullName>
    <formula>ISBLANK( TEXT( Criminal_History__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminCriminalHistoryBlank</label>
    <type>Checkbox</type>
</CustomField>