force-app/main/default/objects/Contact/fields/AdminCurrentRentIssue__c.field-meta.xml
<CustomField>
    <fullName>AdminCurrentRentIssue__c</fullName>
    <formula>OR(
  ISBLANK( Current_Rent__c ),
  ISNULL( Current_Rent__c )
)</formula>
    <label>AdminCurrentRentIssue</label>
    <type>Checkbox</type>
</CustomField>