force-app/main/default/objects/Contact/fields/AdminDesiredRentIssue__c.field-meta.xml
<CustomField>
    <fullName>AdminDesiredRentIssue__c</fullName>
    <formula>ISBLANK( Desired_Rent__c )</formula>
    <label>AdminDesiredRentIssue</label>
    <type>Checkbox</type>
</CustomField>