force-app/main/default/objects/Contact/fields/AdminFamilyBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminFamilyBlank__c</fullName>
    <formula>OR
(
    ISBLANK(TEXT( Has_Family_Contact__c )),

    AND
    (
        TEXT( Has_Family_Contact__c ) = &quot;Yes&quot;,
        
        OR
        (
            ISBLANK( Family_Contact_Name__c ),
            ISBLANK( Family_Contact_Phone__c ), 
            ISBLANK(TEXT(Family_Relationship__c))
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminFamilyBlank</label>
    <type>Checkbox</type>
</CustomField>