force-app/main/default/objects/Contact/fields/AdminFullTimeStudentBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminFullTimeStudentBlank__c</fullName>
    <formula>ISBLANK( TEXT( Full_Time_Student__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminFullTimeStudentBlank</label>
    <type>Checkbox</type>
</CustomField>