force-app/main/default/objects/Contact/fields/AdminHeadOfHouseholdBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminHeadOfHouseholdBlank__c</fullName>
    <formula>ISBLANK( TEXT( Head_of_Household__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminHeadOfHouseholdBlank</label>
    <type>Checkbox</type>
</CustomField>