force-app/main/default/objects/Contact/fields/AdminHousingStabilityBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminHousingStabilityBlank__c</fullName>
    <formula>ISBLANK( TEXT( Housing_Stability_Status__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminHousingStabilityBlank</label>
    <type>Checkbox</type>
</CustomField>