force-app/main/default/objects/Contact/fields/AdminHousingTypeBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminHousingTypeBlank__c</fullName>
    <formula>ISBLANK( TEXT( Housing_Type__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminHousingTypeBlank</label>
    <type>Checkbox</type>
</CustomField>