force-app/main/default/objects/Contact/fields/AdminLanguageBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminLanguageBlank__c</fullName>
    <formula>ISBLANK(TEXT( Language__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminLanguageBlank</label>
    <type>Checkbox</type>
</CustomField>