force-app/main/default/objects/Contact/fields/AdminLimitedMobilityBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminLimitedMobilityBlank__c</fullName>
    <formula>ISBLANK( TEXT( Limited_Mobility__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminLimitedMobilityBlank</label>
    <type>Checkbox</type>
</CustomField>