force-app/main/default/objects/Contact/fields/AdminMissingDocumentationBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminMissingDocumentationBlank__c</fullName>
    <formula>ISBLANK( TEXT( Missing_Documentation__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminMissingDocumentationBlank</label>
    <type>Checkbox</type>
</CustomField>