force-app/main/default/objects/Contact/fields/AdminMoveInDateBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminMoveInDateBlank__c</fullName>
    <formula>AND
(
    Active_RC_Service_Case__c = True,
    ISBLANK( Move_in_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminMoveInDateBlank</label>
    <type>Checkbox</type>
</CustomField>