force-app/main/default/objects/Contact/fields/AdminPaidSupportBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminPaidSupportBlank__c</fullName>
    <formula>OR
(
    ISBLANK(TEXT( Paid_Support_Type__c )),

    AND
    (
        TEXT( Paid_Support_Type__c ) &lt;&gt; &quot;No Support&quot;,
        
        OR
        (
            ISBLANK(Paid_Support_Name__c),
            ISBLANK(Paid_Support_Agency__c), 
            ISBLANK(Paid_Support_Phone__c)
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminPaidSupportBlank</label>
    <type>Checkbox</type>
</CustomField>