force-app/main/default/objects/Contact/fields/AdminPetBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminPetBlank__c</fullName>
    <formula>ISBLANK( TEXT(Pet_Non_Service_Animal__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminPetBlank</label>
    <type>Checkbox</type>
</CustomField>