force-app/main/default/objects/Contact/fields/AdminPriorEvictionBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminPriorEvictionBlank__c</fullName>
    <formula>ISBLANK( TEXT( Prior_Eviction__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminPriorEvictionBlank</label>
    <type>Checkbox</type>
</CustomField>