force-app/main/default/objects/Contact/fields/AdminReasonToMoveBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminReasonToMoveBlank__c</fullName>
    <formula>ISBLANK( Reason_to_Move__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminReasonToMoveBlank</label>
    <type>Checkbox</type>
</CustomField>