force-app/main/default/objects/Contact/fields/AdminRecertificationDateIssue__c.field-meta.xml
<CustomField>
    <fullName>AdminRecertificationDateIssue__c</fullName>
    <formula>AND(
  Active_RC_Service_Case__c || Active_FS_Service_Case__c,
  NOT(Recertification_Complete_Current__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminRecertificationDateIssue</label>
    <type>Checkbox</type>
</CustomField>