force-app/main/default/objects/Contact/fields/AdminRecommendCreditReportBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminRecommendCreditReportBlank__c</fullName>
    <formula>ISBLANK( TEXT( Recommend_Credit_Report__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminRecommendCreditReportBlank</label>
    <type>Checkbox</type>
</CustomField>