force-app/main/default/objects/Contact/fields/AdminRecommendMonthlyBudgetBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminRecommendMonthlyBudgetBlank__c</fullName>
    <formula>ISBLANK( TEXT( Recommend_Monthly_Budget__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminRecommendMonthlyBudgetBlank</label>
    <type>Checkbox</type>
</CustomField>