force-app/main/default/objects/Contact/fields/AdminRecommendRentSavingsBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminRecommendRentSavingsBlank__c</fullName>
    <formula>ISBLANK( TEXT( Recommend_Rent_Savings_Plan__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminRecommendRentSavingsBlank</label>
    <type>Checkbox</type>
</CustomField>