force-app/main/default/objects/Contact/fields/AdminSection8VoucherBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminSection8VoucherBlank__c</fullName>
    <formula>ISBLANK( TEXT( Has_Section_8_Voucher__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminSection8VoucherBlank</label>
    <type>Checkbox</type>
</CustomField>