force-app/main/default/objects/Contact/fields/AdminServiceAnimalBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminServiceAnimalBlank__c</fullName>
    <formula>ISBLANK( TEXT(Service_Animal__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminServiceAnimalBlank</label>
    <type>Checkbox</type>
</CustomField>