force-app/main/default/objects/Contact/fields/AdminUnitSelected__c.field-meta.xml
<CustomField>
    <fullName>AdminUnitSelected__c</fullName>
    <formula>NOT( ISBLANK( Current_Unit__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminUnitSelected</label>
    <type>Checkbox</type>
</CustomField>