force-app/main/default/objects/Contact/fields/AdminWouldConsiderRoommateBlank__c.field-meta.xml
<CustomField>
    <fullName>AdminWouldConsiderRoommateBlank__c</fullName>
    <formula>ISBLANK( TEXT( Would_Consider_Roommate__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdminWouldConsiderRoommateBlank</label>
    <type>Checkbox</type>
</CustomField>