force-app/main/default/objects/Contact/fields/Affordable_if_income_2_5x_rent__c.field-meta.xml
<CustomField>
    <fullName>Affordable_if_income_2_5x_rent__c</fullName>
    <formula>ROUND( HH_Income_Monthly__c  / 2.5 , 0) +  HH_Voucher_Income_Monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affordable if income 2.5x rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>