force-app/main/default/objects/Contact/fields/Age_Four_and_a_Half_Date__c.field-meta.xml
<CustomField>
    <fullName>Age_Four_and_a_Half_Date__c</fullName>
    <formula>ADDMONTHS(Birthdate, 54)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Four and a Half Date</label>
    <type>Date</type>
</CustomField>