force-app/main/default/objects/Contact/fields/Age_Four_and_a_Half_Warn_Active__c.field-meta.xml
<CustomField>
    <fullName>Age_Four_and_a_Half_Warn_Active__c</fullName>
    <formula>AND(
    TODAY() &gt;= ADDMONTHS(Birthdate,52),
    TODAY() &lt;= ADDMONTHS(Birthdate,60)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Four and a Half Warn Active</label>
    <type>Checkbox</type>
</CustomField>