force-app/main/default/objects/Contact/fields/Annual_Regional_Center_Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Regional_Center_Check_in_Date__c</fullName>
    <label>Annual Regional Center Check-in Date</label>
    <type>Date</type>
</CustomField>