force-app/main/default/objects/Contact/fields/AutomationBypassDateTime__c.field-meta.xml
<CustomField>
    <fullName>AutomationBypassDateTime__c</fullName>
    <label>AutomationBypassDateTime</label>
    <type>DateTime</type>
</CustomField>