force-app/main/default/objects/Contact/fields/Bedrooms_Wanted__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms_Wanted__c</fullName>
    <label>Bedrooms Wanted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bedroom_Sizes</valueSetName>
    </valueSet>
</CustomField>