force-app/main/default/objects/Contact/fields/BlockDuplicateMatching__c.field-meta.xml
<CustomField>
    <fullName>BlockDuplicateMatching__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BlockDuplicateMatching</label>
    <type>Checkbox</type>
</CustomField>