force-app/main/default/objects/Contact/fields/Client_County__c.field-meta.xml
<CustomField>
    <fullName>Client_County__c</fullName>
    <label>Client County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>counties_picklist</valueSetName>
    </valueSet>
</CustomField>