force-app/main/default/objects/Contact/fields/Client_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Email__c</fullName>
    <label>Client Email</label>
    <type>Email</type>
</CustomField>