force-app/main/default/objects/Contact/fields/Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone__c</fullName>
    <label>Client Phone</label>
    <type>Phone</type>
</CustomField>