force-app/main/default/objects/Contact/fields/Co_signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Co_signer_Email__c</fullName>
    <label>Co-signer Email</label>
    <type>Email</type>
</CustomField>