force-app/main/default/objects/Contact/fields/Co_signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_signer_Name__c</fullName>
    <label>Co-signer Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>