force-app/main/default/objects/Contact/fields/Co_signer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Co_signer_Phone__c</fullName>
    <label>Co-signer Phone</label>
    <type>Phone</type>
</CustomField>