force-app/main/default/objects/Contact/fields/Conservator_Email__c.field-meta.xml
<CustomField>
    <fullName>Conservator_Email__c</fullName>
    <label>Conservator Email</label>
    <type>Email</type>
</CustomField>