force-app/main/default/objects/Contact/fields/Conservator_Name__c.field-meta.xml
<CustomField>
    <fullName>Conservator_Name__c</fullName>
    <label>Conservator Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>