force-app/main/default/objects/Contact/fields/Conservator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Conservator_Phone__c</fullName>
    <label>Conservator Phone</label>
    <type>Phone</type>
</CustomField>