force-app/main/default/objects/Contact/fields/Conserved__c.field-meta.xml
<CustomField>
    <fullName>Conserved__c</fullName>
    <label>Conserved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>