force-app/main/default/objects/Contact/fields/Contact_owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_owner_ID__c</fullName>
    <formula>Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact owner ID</label>
    <type>Text</type>
</CustomField>