force-app/main/default/objects/Contact/fields/contact_record_id__c.field-meta.xml
<CustomField>
    <fullName>contact_record_id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contact record id</label>
    <type>Text</type>
</CustomField>