force-app/main/default/objects/Contact/fields/Created_Source__c.field-meta.xml
<CustomField>
    <fullName>Created_Source__c</fullName>
    <defaultValue>&quot;User&quot;</defaultValue>
    <label>Created Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreateSource</valueSetName>
    </valueSet>
</CustomField>