force-app/main/default/objects/Contact/fields/CreatedToday__c.field-meta.xml
<CustomField>
    <fullName>CreatedToday__c</fullName>
    <formula>TODAY() = DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedToday</label>
    <type>Checkbox</type>
</CustomField>