force-app/main/default/objects/Contact/fields/Credit_Problem__c.field-meta.xml
<CustomField>
    <fullName>Credit_Problem__c</fullName>
    <label>Credit Problem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>