force-app/main/default/objects/Contact/fields/Criminal_History__c.field-meta.xml
<CustomField>
    <fullName>Criminal_History__c</fullName>
    <label>Criminal History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>