force-app/main/default/objects/Contact/fields/Current_Case_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Current_Case_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Case Transfer</label>
    <referenceTo>Case_Transfer__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>