force-app/main/default/objects/Contact/fields/Current_Housing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Current_Housing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Housing Plan</label>
    <referenceTo>Housing_Plan__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>