force-app/main/default/objects/Contact/fields/Current_Quarterly_Report__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarterly_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Quarterly Report</label>
    <referenceTo>Quarterly_Report__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>