force-app/main/default/objects/Contact/fields/Current_Quarterly_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarterly_Report_Status__c</fullName>
    <formula>TEXT( Current_Quarterly_Report__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Quarterly Report Status</label>
    <type>Text</type>
</CustomField>