force-app/main/default/objects/Contact/fields/Current_Recertification__c.field-meta.xml
<CustomField>
    <fullName>Current_Recertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Recertification</label>
    <referenceTo>Outcome__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>