force-app/main/default/objects/Contact/fields/Current_Unit__c.field-meta.xml
<CustomField>
    <fullName>Current_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Unit</label>
    <referenceTo>Unit_Occupancy__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>