force-app/main/default/objects/Contact/fields/Current_Unit_Move_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Unit_Move_in_Date__c</fullName>
    <formula>Current_Unit__r.Date_Move_in__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Unit Move-in Date</label>
    <type>Date</type>
</CustomField>