force-app/main/default/objects/Contact/fields/Date_HMIS_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Date_HMIS_Enrollment__c</fullName>
    <label>Date HMIS Enrollment</label>
    <type>Date</type>
</CustomField>