force-app/main/default/objects/Contact/fields/Date_HPS_Assistance_Begins__c.field-meta.xml
<CustomField>
    <fullName>Date_HPS_Assistance_Begins__c</fullName>
    <label>Date HPS Assistance Begins</label>
    <type>Date</type>
</CustomField>