force-app/main/default/objects/Contact/fields/Date_Last_Set_to_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Set_to_Reassign__c</fullName>
    <label>Date Last Set to Reassign</label>
    <type>Date</type>
</CustomField>