force-app/main/default/objects/Contact/fields/Desired_Rent__c.field-meta.xml
<CustomField>
    <fullName>Desired_Rent__c</fullName>
    <label>Desired Rent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>