force-app/main/default/objects/Contact/fields/Documents_Missing__c.field-meta.xml
<CustomField>
    <fullName>Documents_Missing__c</fullName>
    <label>Documents Missing</label>
    <length>250</length>
    <type>Text</type>
</CustomField>