force-app/main/default/objects/Contact/fields/Donorbox_Donation_Id__c.field-meta.xml
<CustomField>
    <fullName>Donorbox_Donation_Id__c</fullName>
    <label>Donorbox Donation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>