force-app/main/default/objects/Contact/fields/DonorID__c.field-meta.xml
<CustomField>
    <fullName>DonorID__c</fullName>
    <label>DonorID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>