force-app/main/default/objects/Contact/fields/EmailNotEqualPrimaryContactEmail__c.field-meta.xml
<CustomField>
    <fullName>EmailNotEqualPrimaryContactEmail__c</fullName>
    <formula>Email !=  Primary_Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailNotEqualPrimaryContactEmail</label>
    <type>Checkbox</type>
</CustomField>