force-app/main/default/objects/Contact/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <label>Emergency Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Conservator</fullName>
            </value>
            <value>
                <fullName>Family Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paid Support Contact</fullName>
            </value>
            <value>
                <fullName>Rep Payee</fullName>
            </value>
            <value>
                <fullName>Service Coordinator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>